--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avnish Vidyarthi - Personal Portfolio</title>
     <link rel="stylesheet" href="portfolio.css">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav id="navbar">
@@ -12,6 +13,7 @@
         <a href="#about" class="nav-link">About</a>
         <a href="#skills" class="nav-link">Skills</a>
         <a href="#projects" class="nav-link">Projects</a>
+        <a href="#contact" class="nav-link">Contact</a>
         <a id="profile-link" href="https://github.com/yourusername" target="_blank">GitHub Profile</a>
     </nav>
     
@@ -52,6 +54,16 @@
         <div class="project-tile">
             <a href="https://example.com/project4" target="_blank">Project 4</a>
         </div>
+    </section>
+
+    <section id="quote">
+        <h2>Coding Quote</h2>
+        <p>"Programming is like writing a book... except if you miss a single comma on page 126, the whole thing makes no sense."</p>
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>If you would like to get in touch, please feel free to <a href="mailto:your.email@example.com">email me</a>.</p>
     </section>
 
     <footer>
