--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
         <a href="#skills" class="nav-link">Skills</a>
         <a href="#projects" class="nav-link">Projects</a>
         <a href="#contact" class="nav-link">Contact</a>
-        <a id="profile-link" href="https://github.com/yourusername" target="_blank">GitHub Profile</a>
+        <a id="profile-link" href="https://github.com/avnlsh" target="_blank">GitHub Profile</a>
     </nav>
     
     <section id="welcome-section">
